# data-engineering-bootcamp

./: pyproject.toml
00-bootcamp-project/: load_data_to_bigquery.py  load_data_to_gcs_challenge_one2car.py  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgres.py  main-sftp.py  pipeline.conf  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  my-deb-workshop-deb3-load-files-to-bigquery-65990ca3a02e.json  my-deb-workshop-deb3-uploading-files-to-gcs-18004ff4f153.json
00_myproject/: pyproject.toml
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  main.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: main.py
04-data-pipelines-with-apache-airflow/dags/: every_first_sixteenth_5pm_dag.py  everyday_dag.py  everymonday_dag.py  everymonth_dag.py  everytuesday_8halfam_dag.py  example_dag_1.py  play_with_templating.py
