[tool.poetry]
name = "00-myproject"
version = "0.1.0"
description = ""
authors = ["Warodom-Phungjununt <155611313+Warodom-Phungjununt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "2.2.0"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
